--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,8 +6,10 @@ services:
       context: ./app
       dockerfile: Dockerfile.prod
     command: gunicorn muh_taxes.wsgi:application --bind 0.0.0.0:8000
-    ports:
-      - 8001:8000
+    volumes:
+      - static_volume:/home/app/web/staticfiles
+    expose:
+      - 8000
     env_file:
       - ./.env.prod
     depends_on:
@@ -18,6 +20,15 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.prod.db
+  nginx:
+    build: ./nginx
+    volumes:
+      - static_volume:/home/app/web/staticfiles
+    ports:
+      - 1337:80
+    depends_on:
+      - web
 
 volumes:
   postgres_data:
+  static_volume:
