--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,10 +7,14 @@ server {
     listen 80;
 
     location / {
-        proxy_pass muh_taxes;
+        proxy_pass http://muh_taxes;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+    }
+
+    location /static/ {
+        alias /home/app/web/staticfiles/;
     }
 
 }
